# prowlrbot

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  README.md  README.swarm.md  SECURITY.md  docker-compose.bridge.yml  docker-compose.swarm.yml  fly.toml  index.html  pyproject.toml
.github/DISCUSSION_TEMPLATE/: help.yml
.github/workflows/: ci.yml  deploy-website.yml  label-pr.yml  release.yml  security.yml
.wrangler/cache/: wrangler-account.json
assets/: _baseUniq-CcLeDRB9.js  _baseUniq-D3tCO87f.js  arc-C6TILtw-.js  arc-v0WNf0jJ.js  architectureDiagram-VXUJARFQ-Bn5jAaYu.js  architectureDiagram-VXUJARFQ-REU7Y9Cs.js  blockDiagram-VD42YOAC-B6FyF7hn.js  blockDiagram-VD42YOAC-D6f5CdsU.js  c4Diagram-YG6GDRKO-BZ1rx6os.js  c4Diagram-YG6GDRKO-CY3ooaoR.js  channel-Cj0kYsO5.js  channel-Plk2mNp3.js  chunk-4BX2VUAB-BHq0Gf8P.js  chunk-4BX2VUAB-UxCM9OAd.js  chunk-55IACEB6-B8b6hov9.js  chunk-55IACEB6-BqkAkwH0.js  chunk-B4BG7PRW-Bkmowr8v.js  chunk-B4BG7PRW-HaaRtmod.js  chunk-DI55MBZ5-DU28rLiW.js  chunk-DI55MBZ5-_aSpJLBc.js  chunk-FMBD7UC4-9yXT1nyC.js  chunk-FMBD7UC4-DGWyVWkd.js  chunk-QN33PNHL-CJU35Suj.js  chunk-QN33PNHL-CXceJyR3.js  chunk-QZHKN3VN-63vMZMmq.js  chunk-QZHKN3VN-BCOGBt6p.js  chunk-TZMSLE5B-CcZ2QPXO.js  chunk-TZMSLE5B-yLd_arrL.js  classDiagram-2ON5EDUG-C8b_rmKw.js  classDiagram-v2-WZHVMYZB-DvDa5Pnn.js  clone-DkIQ5uwF.js  clone-vVX-wDov.js  cose-bilkent-S5V4N54A-BH4l5O3C.js  cose-bilkent-S5V4N54A-CJaontJJ.js  dagre-6UL2VRFP-AFo460Hr.js  dagre-6UL2VRFP-IJ8WyDf1.js  diagram-PSM6KHXK-BqYBeBVE.js  diagram-PSM6KHXK-BvMkMZfz.js  diagram-QEK2KX5R-C9yU3-CL.js  diagram-QEK2KX5R-DCngulLW.js  (+49 more)
console/: .env.example  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  instrument.ts  main.tsx
deploy/: Dockerfile.fly  README.md  entrypoint-fly.sh
docker/: .env.example  Dockerfile.bridge  Dockerfile.worker  docker-compose.yml
docs/: DISCREPANCIES.md  README.md  troubleshooting.md
docs/blog/: 2026-03-10-introducing-prowlrbot.md  2026-03-10-security-first.md  2026-03-11-656gb-feedback-loop.md  2026-03-11-pip-install-broke-my-wsl.md  README.md
docs/contributing/: index.html
docs/guides/: channels.md  cli-reference.md  cron-jobs.md  deployment.md  env-and-console-login.md  marketplace.md  mcp-setup.md  memory-system.md  providers.md  roar-usage.md  signup-credits-and-workspace.md  tiers-and-payments.md  war-room-dashboard-plan.md
docs/plans/: 2026-03-09-prowlrbot-implementation-plan.md  2026-03-09-prowlrbot-leapfrog-design.md  2026-03-09-prowlrbot-phase1-implementation.md  2026-03-09-prowlrbot-rebrand-and-enhancement-design.md  2026-03-10-roar-protocol-design.md  2026-03-11-ecosystem-roadmap.md  2026-03-11-warroom-dashboard-design.md  2026-03-11-warroom-implementation-plan.md
docs/protocols/: ROAR-CONNECT.md  ROAR-DISCOVERY.md  ROAR-EXCHANGE.md  ROAR-IDENTITY.md  ROAR-SPEC.md  ROAR-STREAM.md
docs/research/: 2026-03-10-agent-protocol-landscape.md
docs/roar-protocol/: README.md  spec-v1.md
org-github-template/: SUPPORT.md
org-github-template/profile/: README.md
scripts/: validate-security.sh
src/prowlrbot/: __init__.py  __main__.py  compat.py  constant.py
swarm/: README.md
swarm/bridge/: Dockerfile  capabilities.py  config.py  docker-compose.bridge.yml  main.py  middleware.py  requirements.txt  start.sh
swarm/client/: client.py  config.py  requirements.txt
swarm/worker/: Dockerfile  config.py  main.py  requirements.txt
tests/: test_autonomy_wiring.py  test_gamification_wiring.py  test_hardware_router.py  test_leaderboard_push.py  test_marketplace_tiers.py  test_mcp_resilience.py  test_memory_compaction_hook.py  test_openai_stream_toolcall_compat.py  test_react_agent_tool_choice.py  test_replay_wiring.py
tests/agents/: test_archive_db.py  test_memory_tier_wiring.py  test_tier_manager.py
tests/app/: test_monitoring_router.py  test_studio_router.py
tests/cli/: test_acp_cmd.py  test_market_cli.py  test_market_cmd.py  test_studio_cmd.py
tests/hardware/: test_catalog.py  test_detector.py  test_scorer.py
tests/hub/: test_bridge_e2e.py  test_bridge_security.py  test_engine.py  test_engine_security.py  test_learning_engine.py
tests/integration/: test_detection_flow.py  test_memory_tiers.py  test_protocol_stack.py
tests/marketplace/: test_bundles.py  test_install_delivery.py  test_models.py  test_models_v2.py  test_registry.py  test_scanner.py  test_store.py  test_store_v2.py
tests/monitor/: test_alert_router.py  test_scheduled_monitors.py
tests/protocols/: test_acp_server.py  test_roar_a2a_sqlite_store.py  test_roar_adapters.py  test_roar_discovery.py  test_roar_hub_server.py  test_roar_identity.py  test_roar_replay_buffer.py  test_roar_sqlite_directory.py  test_roar_streaming.py  test_roar_transports.py  test_roar_types.py
tests/routers/: test_agentverse_bridge.py  test_marketplace_api.py  test_marketplace_bundles.py  test_marketplace_detail.py  test_marketplace_personas.py  test_marketplace_stripe.py
tests/swarm/: __init__.py  test_bridge_api.py  test_hmac.py  test_job_queue.py
tests/unit/: test_activity_log.py  test_agent_config.py  test_agent_store.py  test_auth.py  test_auth_middleware.py  test_detector.py  test_envs_masking.py  test_file_io_security.py  test_guardrails.py  test_health.py  test_monitor_config.py  test_monitor_diff.py  test_monitor_engine.py  test_monitor_storage.py  test_provider_models.py  test_rate_limit.py  test_router.py  test_shell_security.py  test_web_detector.py  test_webhook_notifier.py  test_websocket.py  test_ws_endpoint.py
tests/workflows/: test_engine.py  test_loader.py  test_models.py
website/: .env.example  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
website/public/: search-index.json  site.config.json
website/scripts/: spa-fallback-pages.mjs
website/src/: App.tsx  config.ts  i18n.ts  index.css  main.tsx
(+415 files in other folders)
