[project]
name = "prowlrbot"
dynamic = ["version"]
description = "ProwlrBot — Always watching. Always ready. An autonomous AI agent platform for monitoring, automation, and multi-channel communication."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "agentscope==1.0.16",
    "agentscope-runtime==1.1.0",
    "discord-py>=2.7.1",
    "dingtalk-stream>=0.24.3",
    "uvicorn>=0.41.0",
    "apscheduler>=3.11.2,<4",
    "playwright>=1.58.0",
    "questionary>=2.1.1",
    "mss>=10.1.0",
    "reme-ai==0.3.0.1",
    "transformers>=4.49.0",
    "python-dotenv>=1.0.0",
    "python-socks>=2.8.1",
    "onnxruntime<1.24",
    "lark-oapi>=1.5.3",
    "python-telegram-bot>=22.6",
    "httpx>=0.28.1",
]

[tool.setuptools.dynamic]
version = {attr = "prowlrbot.__version__.__version__"}

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

[tool.setuptools.package-data]
"prowlrbot" = [
    "console/**",
    "agents/md_files/**",
    "agents/skills/**",
    "tokenizer/**",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
prowlr = "prowlrbot.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
]
local = [
    "huggingface_hub>=1.6.0",
]
llamacpp = [
    "prowlrbot[local]",
    "llama-cpp-python>=0.3.0",
]
mlx = [
    "prowlrbot[local]",
    "mlx-lm>=0.10.0",
]
ollama = [
    "ollama>=0.6.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
